--- a/index.html
+++ b/index.html
@@ -1718,7 +1718,7 @@
       <div class="deck-brand">
         <img
           class="deck-logo"
-          src="frontend/src/assets/strategy-logo.png"
+          src="assets/strategy-logo.png"
           alt="Strategy"
         />
         <span class="deck-divider" aria-hidden="true"></span>
@@ -1740,13 +1740,13 @@
         <div class="slide-tag">Contexto y decisión</div>
         <div class="cover-logos">
           <img
-            src="frontend/src/assets/strategy-logo.png"
+            src="assets/strategy-logo.png"
             alt="Strategy"
             loading="eager"
           />
           <span class="cover-divider" aria-hidden="true"></span>
           <img
-            src="frontend/src/assets/Timenator Blanco.png"
+            src="assets/Timenator Blanco.png"
             alt="TimeNator"
             loading="eager"
           />
@@ -2995,9 +2995,9 @@
       <!-- Slide 13: Gracias -->
       <section class="slide cover cover--center" data-title="Gracias">
         <div class="cover-logos">
-          <img src="frontend/src/assets/strategy-logo.png" alt="Strategy" loading="eager" />
+          <img src="assets/strategy-logo.png" alt="Strategy" loading="eager" />
           <span class="cover-divider" aria-hidden="true"></span>
-          <img src="frontend/src/assets/Timenator Blanco.png" alt="TimeNator" loading="eager" />
+          <img src="assets/Timenator Blanco.png" alt="TimeNator" loading="eager" />
         </div>
         <h1>Gracias</h1>
         <h3>¿Preguntas?</h3>
